--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
   { name="Paul Cayet", email="paul.cayet@student-cs.fr" },
 ]
-description = "A Python implementation of the R Setar Trees implementation from Godahewa et al."
+description = "A Python implementation of the R Setar Trees models from Godahewa et al."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
